Asset manager: Fixed asset view cropped by navigation

--- a/src/css/boom/assets/view.less
+++ b/src/css/boom/assets/view.less
@@ -209,15 +209,15 @@ html.boom .b-assets-view {
 }
 
 @media all and (min-width: 767px) {
-    html.boom .b-assets-view:not(.no-navigation) {
+    html.boom #b-assets-manager #b-assets-content .b-assets-view:not(.no-navigation) {
         .b-settings {
             .b-settings-menu {
-                height: calc(~"100vh - 29rem");
+                height: calc(~"100vh - 25rem");
             }
 
             .b-settings-content {
-                height: calc(~"100vh - 29rem");
-                min-height: 0;
+                height: calc(~"100vh - 27rem");
+                min-height: calc(~"100vh - 27rem");
             }
         }
     }
